src/containers/App/App.scss
body {
  background-color: #fdfaf7;
  background-image: url('./bg/p2.png'), url('./bg/p1.png');
}

h1, h2, h3 {
  color: $color-primary;
  font-weight: 500;
}

h1 {
  font-size: 3rem;
}

h2 {
  font-size: 2.4rem;
}

h3 {
  font-size: 1.8rem;
  line-height: 3rem;
}

.app {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.appContent {
  margin-top: 6.4rem;
  padding: 2.4rem 0;
  flex: 1;
}

.progress {
  position: fixed;
  z-index: 101;
  top: 0;
  height: 0;
  transition: height 0.5s ease;
}

.progressActive {
  height: 0.4rem;
}


:global {
  .pointer {
    cursor: pointer;
  }
}

