fix DRY lunch disabled change imagePreview image url hide chat on mobile(width<767px) change redirect for admin in user dropdown fix user menu position if time to order > 24 show label "Больше 1 дня" tooltip for lunch on home page

--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -50,4 +50,10 @@ h3 {
   .pointer {
     cursor: pointer;
   }
+
+  @media all and (max-width:767px) {
+    #linkedchat {
+      display: none;
+    }
+  }
 }
